"Remake Jwt token"